--- a/notebooks/run_grid_raglimit_demo.ipynb
+++ b/notebooks/run_grid_raglimit_demo.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "fb6038d3-def4-4fc4-8ae2-4327af3e919f",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
     "from api.utils import log_and_raise_for_status\n",
     "\n",
     "API_URL = \"http://localhost:8000\"\n",
-    "ALBERT_API_URL = \"https://albert.api.etalab.gouv.fr/v1\"\n",
+    "ALBERT_API_URL = \"https://albert.api.staging.etalab.gouv.fr/v1\"\n",
     "ALBERT_API_KEY = os.getenv(\"ALBERT_API_KEY\")\n",
     "MFS_API_URL = \"https://franceservices.dev.etalab.gouv.fr/api/v1\"\n",
     "\n",
@@ -86,32 +86,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "1b60dd8b-e7b5-4a08-86c7-1025c5b80f18",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Created expset: fs_rag_limit_v2 (12)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Designing my experiments\n",
     "# --\n",
-    "expset_name = \"fs_rag_limit_v2\"\n",
+    "expset_name = \"albert_api_guillaumetell_rag_limit_v2\"\n",
     "expset_readme = \"Comparing the impact of the `limit` parameters on a RAG model.\"\n",
-    "metrics = [\"answer_relevancy\", \"judge_exactness\", \"judge_notator\", \"output_length\", \"generation_time\"]\n",
+    "metrics = [\"answer_relevancy\",  \"judge_notator\", \"output_length\", \"generation_time\"]\n",
     "common_params = {\n",
     "    \"dataset\" : \"MFS_questions_v01\",\n",
-    "    \"model\" : {\"name\": \"AgentPublic/llama3-instruct-8b\", \"base_url\": MFS_API_URL, \"api_key\": ALBERT_API_KEY},\n",
+    "    \"model\" : {\"name\": \"AgentPublic/llama3-instruct-guillaumetell\", \"base_url\": ALBERT_API_URL, \"api_key\": ALBERT_API_KEY},\n",
     "    \"sampling_params\" : {\"temperature\": 0.2},\n",
     "    \"metrics\" : metrics\n",
     "}\n",
     "grid_params = {\n",
-    "    \"model\": [{\"extra_params\": {\"rag\": {\"mode\":\"rag\", \"limit\":i}}} for i in [1, 2, 3, 4, 5, 7, 10, 15, 20]],\n",
+    "    \"model\": [{\"extra_params\": {\"rag\": {\"mode\":\"rag\", \"limit\":i}}} for i in [1, 2, 3]],\n",
     "}\n",
     "\n",
     "# Lauching the experiment set\n",
@@ -120,13 +112,13 @@
     "    \"readme\": expset_readme,\n",
     "    \"cv\": {\"common_params\": common_params, \"grid_params\": grid_params}\n",
     "}\n",
-    "response = requests.post(f'{API_URL}/v1/experiment_set', json=expset)\n",
-    "resp = response.json()\n",
-    "if \"id\" in resp:\n",
-    "    expset_id = resp[\"id\"]\n",
-    "    print(f'Created expset: {resp[\"name\"]} ({resp[\"id\"]})')\n",
-    "else:\n",
-    "    print(resp)"
+    "# response = requests.post(f'{API_URL}/v1/experiment_set', json=expset)\n",
+    "# resp = response.json()\n",
+    "# if \"id\" in resp:\n",
+    "#     expset_id = resp[\"id\"]\n",
+    "#     print(f'Created expset: {resp[\"name\"]} ({resp[\"id\"]})')\n",
+    "# else:\n",
+    "#     print(resp)"
    ]
   },
   {
@@ -139,7 +131,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
+   "id": "ba406ef5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "expset_id = 7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "177816f4-1105-497d-a14b-7178850d36f4",
    "metadata": {},
    "outputs": [
@@ -147,24 +149,23 @@
      "data": {
       "text/html": [
        "<style type=\"text/css\">\n",
-       "#T_d3929_row0_col0, #T_d3929_row0_col1, #T_d3929_row2_col2, #T_d3929_row3_col3, #T_d3929_row3_col4 {\n",
+       "#T_3069e_row1_col0, #T_3069e_row2_col1, #T_3069e_row2_col2, #T_3069e_row2_col3 {\n",
        "  font-weight: bold;\n",
        "  color: green;\n",
        "}\n",
-       "#T_d3929_row6_col1, #T_d3929_row7_col0, #T_d3929_row7_col2, #T_d3929_row7_col3, #T_d3929_row7_col4 {\n",
+       "#T_3069e_row1_col1, #T_3069e_row1_col2, #T_3069e_row1_col3, #T_3069e_row2_col0 {\n",
        "  font-weight: bold;\n",
        "  color: salmon;\n",
        "}\n",
        "</style>\n",
-       "<table id=\"T_d3929\">\n",
+       "<table id=\"T_3069e\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_d3929_level0_col0\" class=\"col_heading level0 col0\" >answer_relevancy</th>\n",
-       "      <th id=\"T_d3929_level0_col1\" class=\"col_heading level0 col1\" >judge_exactness</th>\n",
-       "      <th id=\"T_d3929_level0_col2\" class=\"col_heading level0 col2\" >judge_notator</th>\n",
-       "      <th id=\"T_d3929_level0_col3\" class=\"col_heading level0 col3\" >output_length</th>\n",
-       "      <th id=\"T_d3929_level0_col4\" class=\"col_heading level0 col4\" >generation_time</th>\n",
+       "      <th id=\"T_3069e_level0_col0\" class=\"col_heading level0 col0\" >answer_relevancy</th>\n",
+       "      <th id=\"T_3069e_level0_col1\" class=\"col_heading level0 col1\" >judge_notator</th>\n",
+       "      <th id=\"T_3069e_level0_col2\" class=\"col_heading level0 col2\" >output_length</th>\n",
+       "      <th id=\"T_3069e_level0_col3\" class=\"col_heading level0 col3\" >generation_time</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th class=\"index_name level0\" >model</th>\n",
@@ -172,90 +173,38 @@
        "      <th class=\"blank col1\" >&nbsp;</th>\n",
        "      <th class=\"blank col2\" >&nbsp;</th>\n",
        "      <th class=\"blank col3\" >&nbsp;</th>\n",
-       "      <th class=\"blank col4\" >&nbsp;</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_d3929_level0_row0\" class=\"row_heading level0 row0\" >AgentPublic/llama3-instruct-8b_limit5</th>\n",
-       "      <td id=\"T_d3929_row0_col0\" class=\"data row0 col0\" >0.928468</td>\n",
-       "      <td id=\"T_d3929_row0_col1\" class=\"data row0 col1\" >0.153846</td>\n",
-       "      <td id=\"T_d3929_row0_col2\" class=\"data row0 col2\" >4.846154</td>\n",
-       "      <td id=\"T_d3929_row0_col3\" class=\"data row0 col3\" >120.615385</td>\n",
-       "      <td id=\"T_d3929_row0_col4\" class=\"data row0 col4\" >4.538462</td>\n",
+       "      <th id=\"T_3069e_level0_row0\" class=\"row_heading level0 row0\" >AgentPublic/llama3-instruct-guillaumetell_limit3</th>\n",
+       "      <td id=\"T_3069e_row0_col0\" class=\"data row0 col0\" >0.883592</td>\n",
+       "      <td id=\"T_3069e_row0_col1\" class=\"data row0 col1\" >3.512821</td>\n",
+       "      <td id=\"T_3069e_row0_col2\" class=\"data row0 col2\" >376.282051</td>\n",
+       "      <td id=\"T_3069e_row0_col3\" class=\"data row0 col3\" >8.102564</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_d3929_level0_row1\" class=\"row_heading level0 row1\" >AgentPublic/llama3-instruct-8b_limit4</th>\n",
-       "      <td id=\"T_d3929_row1_col0\" class=\"data row1 col0\" >0.884116</td>\n",
-       "      <td id=\"T_d3929_row1_col1\" class=\"data row1 col1\" >0.128205</td>\n",
-       "      <td id=\"T_d3929_row1_col2\" class=\"data row1 col2\" >5.256410</td>\n",
-       "      <td id=\"T_d3929_row1_col3\" class=\"data row1 col3\" >117.487179</td>\n",
-       "      <td id=\"T_d3929_row1_col4\" class=\"data row1 col4\" >4.333333</td>\n",
+       "      <th id=\"T_3069e_level0_row1\" class=\"row_heading level0 row1\" >AgentPublic/llama3-instruct-guillaumetell_limit1</th>\n",
+       "      <td id=\"T_3069e_row1_col0\" class=\"data row1 col0\" >0.902771</td>\n",
+       "      <td id=\"T_3069e_row1_col1\" class=\"data row1 col1\" >3.179487</td>\n",
+       "      <td id=\"T_3069e_row1_col2\" class=\"data row1 col2\" >359.025641</td>\n",
+       "      <td id=\"T_3069e_row1_col3\" class=\"data row1 col3\" >7.564103</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_d3929_level0_row2\" class=\"row_heading level0 row2\" >AgentPublic/llama3-instruct-8b_limit10</th>\n",
-       "      <td id=\"T_d3929_row2_col0\" class=\"data row2 col0\" >0.916034</td>\n",
-       "      <td id=\"T_d3929_row2_col1\" class=\"data row2 col1\" >0.128205</td>\n",
-       "      <td id=\"T_d3929_row2_col2\" class=\"data row2 col2\" >5.589744</td>\n",
-       "      <td id=\"T_d3929_row2_col3\" class=\"data row2 col3\" >125.000000</td>\n",
-       "      <td id=\"T_d3929_row2_col4\" class=\"data row2 col4\" >5.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th id=\"T_d3929_level0_row3\" class=\"row_heading level0 row3\" >AgentPublic/llama3-instruct-8b_limit20</th>\n",
-       "      <td id=\"T_d3929_row3_col0\" class=\"data row3 col0\" >0.915436</td>\n",
-       "      <td id=\"T_d3929_row3_col1\" class=\"data row3 col1\" >0.128205</td>\n",
-       "      <td id=\"T_d3929_row3_col2\" class=\"data row3 col2\" >5.487179</td>\n",
-       "      <td id=\"T_d3929_row3_col3\" class=\"data row3 col3\" >135.589744</td>\n",
-       "      <td id=\"T_d3929_row3_col4\" class=\"data row3 col4\" >5.512821</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th id=\"T_d3929_level0_row4\" class=\"row_heading level0 row4\" >AgentPublic/llama3-instruct-8b_limit7</th>\n",
-       "      <td id=\"T_d3929_row4_col0\" class=\"data row4 col0\" >0.802585</td>\n",
-       "      <td id=\"T_d3929_row4_col1\" class=\"data row4 col1\" >0.102564</td>\n",
-       "      <td id=\"T_d3929_row4_col2\" class=\"data row4 col2\" >5.205128</td>\n",
-       "      <td id=\"T_d3929_row4_col3\" class=\"data row4 col3\" >122.974359</td>\n",
-       "      <td id=\"T_d3929_row4_col4\" class=\"data row4 col4\" >4.641026</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th id=\"T_d3929_level0_row5\" class=\"row_heading level0 row5\" >AgentPublic/llama3-instruct-8b_limit15</th>\n",
-       "      <td id=\"T_d3929_row5_col0\" class=\"data row5 col0\" >0.876101</td>\n",
-       "      <td id=\"T_d3929_row5_col1\" class=\"data row5 col1\" >0.102564</td>\n",
-       "      <td id=\"T_d3929_row5_col2\" class=\"data row5 col2\" >5.153846</td>\n",
-       "      <td id=\"T_d3929_row5_col3\" class=\"data row5 col3\" >121.487179</td>\n",
-       "      <td id=\"T_d3929_row5_col4\" class=\"data row5 col4\" >5.230769</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th id=\"T_d3929_level0_row6\" class=\"row_heading level0 row6\" >AgentPublic/llama3-instruct-8b_limit2</th>\n",
-       "      <td id=\"T_d3929_row6_col0\" class=\"data row6 col0\" >0.871865</td>\n",
-       "      <td id=\"T_d3929_row6_col1\" class=\"data row6 col1\" >0.076923</td>\n",
-       "      <td id=\"T_d3929_row6_col2\" class=\"data row6 col2\" >4.846154</td>\n",
-       "      <td id=\"T_d3929_row6_col3\" class=\"data row6 col3\" >97.717949</td>\n",
-       "      <td id=\"T_d3929_row6_col4\" class=\"data row6 col4\" >3.538462</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th id=\"T_d3929_level0_row7\" class=\"row_heading level0 row7\" >AgentPublic/llama3-instruct-8b_limit1</th>\n",
-       "      <td id=\"T_d3929_row7_col0\" class=\"data row7 col0\" >0.781959</td>\n",
-       "      <td id=\"T_d3929_row7_col1\" class=\"data row7 col1\" >0.076923</td>\n",
-       "      <td id=\"T_d3929_row7_col2\" class=\"data row7 col2\" >3.410256</td>\n",
-       "      <td id=\"T_d3929_row7_col3\" class=\"data row7 col3\" >86.384615</td>\n",
-       "      <td id=\"T_d3929_row7_col4\" class=\"data row7 col4\" >3.128205</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th id=\"T_d3929_level0_row8\" class=\"row_heading level0 row8\" >AgentPublic/llama3-instruct-8b_limit3</th>\n",
-       "      <td id=\"T_d3929_row8_col0\" class=\"data row8 col0\" >0.860713</td>\n",
-       "      <td id=\"T_d3929_row8_col1\" class=\"data row8 col1\" >0.076923</td>\n",
-       "      <td id=\"T_d3929_row8_col2\" class=\"data row8 col2\" >4.717949</td>\n",
-       "      <td id=\"T_d3929_row8_col3\" class=\"data row8 col3\" >107.410256</td>\n",
-       "      <td id=\"T_d3929_row8_col4\" class=\"data row8 col4\" >3.948718</td>\n",
+       "      <th id=\"T_3069e_level0_row2\" class=\"row_heading level0 row2\" >AgentPublic/llama3-instruct-guillaumetell_limit2</th>\n",
+       "      <td id=\"T_3069e_row2_col0\" class=\"data row2 col0\" >0.866329</td>\n",
+       "      <td id=\"T_3069e_row2_col1\" class=\"data row2 col1\" >3.564103</td>\n",
+       "      <td id=\"T_3069e_row2_col2\" class=\"data row2 col2\" >380.923077</td>\n",
+       "      <td id=\"T_3069e_row2_col3\" class=\"data row2 col3\" >8.333333</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x7f35fddfe870>"
+       "<pandas.io.formats.style.Styler at 0x1308498e0>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,11 +252,19 @@
     "final_df = df_all.xs('mean', axis=1, level=1)\n",
     "#final_df[\"support\"] = supports # for debugging\n",
     "\n",
-    "final_df = final_df.sort_values(by='judge_exactness', ascending=False)\n",
+    "#final_df = final_df.sort_values(by='judge_exactness', ascending=False)\n",
     "final_df = final_df[metrics] # reorder columns\n",
     "final_df = final_df.style.apply(highlight_cells, axis=0)\n",
     "final_df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7dbe827e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -326,7 +283,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
