--- a/notebooks/run_grid_repeat_demo.ipynb
+++ b/notebooks/run_grid_repeat_demo.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 1,
    "id": "fb6038d3-def4-4fc4-8ae2-4327af3e919f",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
     "from api.utils import log_and_raise_for_status\n",
     "\n",
     "API_URL = \"http://localhost:8000\"\n",
-    "ALBERT_API_URL = \"https://albert.api.etalab.gouv.fr/v1\"\n",
+    "ALBERT_API_URL = \"https://albert.api.staging.etalab.gouv.fr/v1\"\n",
     "ALBERT_API_KEY = os.getenv(\"ALBERT_API_KEY\")\n",
     "MFS_API_URL = \"https://franceservices.dev.etalab.gouv.fr/api/v1\"\n",
     "\n",
@@ -86,24 +86,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 2,
    "id": "1b60dd8b-e7b5-4a08-86c7-1025c5b80f18",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Created expset: fs_variability_v2 (9)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Designing my experiments\n",
     "# --\n",
-    "expset_name = \"fs_variability_v2\"\n",
+    "expset_name = \"fs_variability_v5\"\n",
     "expset_readme = \"Comparing some models variability.\"\n",
-    "metrics = [\"answer_relevancy\", \"judge_exactness\", \"judge_notator\", \"output_length\", \"generation_time\"]\n",
+    "metrics = [\"answer_relevancy\", \"judge_exactness\", \"judge_notator\", \"output_length\", \"generation_time\", \"nb_tokens_completion\"]\n",
     "common_params = {\n",
     "    \"dataset\" : \"MFS_questions_v01\",\n",
     "    \"sampling_params\" : {\"temperature\": 0.2},\n",
@@ -114,10 +106,10 @@
     "        {\"name\": \"AgentPublic/llama3-instruct-8b\",         \"base_url\": ALBERT_API_URL, \"api_key\": ALBERT_API_KEY},\n",
     "        {\"name\": \"meta-llama/Meta-Llama-3.1-8B-Instruct\",  \"base_url\": ALBERT_API_URL, \"api_key\": ALBERT_API_KEY},\n",
     "        {\"name\": \"meta-llama/Meta-Llama-3.1-70B-Instruct\", \"base_url\": ALBERT_API_URL, \"api_key\": ALBERT_API_KEY},\n",
-    "        {\n",
-    "          \"name\": \"AgentPublic/llama3-instruct-8b\", \"extra_params\": {\"rag\": {\"mode\":\"rag\", \"limit\":7}}, \n",
-    "          \"base_url\": MFS_API_URL, \"api_key\": ALBERT_API_KEY, \n",
-    "        }\n",
+    "        # {\n",
+    "        #   \"name\": \"AgentPublic/llama3-instruct-8b\", \"extra_params\": {\"rag\": {\"mode\":\"rag\", \"limit\":7}}, \n",
+    "        #   \"base_url\": MFS_API_URL, \"api_key\": ALBERT_API_KEY, \n",
+    "        # }\n",
     "    ],\n",
     "}\n",
     "\n",
@@ -125,15 +117,15 @@
     "expset = {\n",
     "    \"name\" : expset_name, \n",
     "    \"readme\": expset_readme,\n",
-    "    \"cv\": {\"common_params\": common_params, \"grid_params\": grid_params, \"repeat\":10}\n",
+    "    \"cv\": {\"common_params\": common_params, \"grid_params\": grid_params, \"repeat\":2}\n",
     "}\n",
-    "response = requests.post(f'{API_URL}/v1/experiment_set', json=expset)\n",
-    "resp = response.json()\n",
-    "if \"id\" in resp:\n",
-    "    expset_id = resp[\"id\"]\n",
-    "    print(f'Created expset: {resp[\"name\"]} ({resp[\"id\"]})')\n",
-    "else:\n",
-    "    print(resp)"
+    "# response = requests.post(f'{API_URL}/v1/experiment_set', json=expset)\n",
+    "# resp = response.json()\n",
+    "# if \"id\" in resp:\n",
+    "#     expset_id = resp[\"id\"]\n",
+    "#     print(f'Created expset: {resp[\"name\"]} ({resp[\"id\"]})')\n",
+    "# else:\n",
+    "#     print(resp)"
    ]
   },
   {
@@ -148,75 +140,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 8,
+   "id": "b58bc2c0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "expset_id = 8"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "177816f4-1105-497d-a14b-7178850d36f4",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Warning: experiment 87 is not finished yet...\n",
+      "Warning: experiment 89 is not finished yet...\n",
+      "Warning: experiment 93 is not finished yet...\n",
+      "Warning: experiment 92 is not finished yet...\n",
+      "Warning: experiment 90 is not finished yet...\n",
+      "Warning: experiment 91 is not finished yet...\n",
+      "Warning: experiment 88 is not finished yet...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/audrey_clevy/code/eg1/.venv/lib/python3.12/site-packages/numpy/core/fromnumeric.py:3504: RuntimeWarning: Mean of empty slice.\n",
+      "  return _methods._mean(a, axis=axis, dtype=dtype,\n",
+      "/Users/audrey_clevy/code/eg1/.venv/lib/python3.12/site-packages/numpy/core/_methods.py:129: RuntimeWarning: invalid value encountered in scalar divide\n",
+      "  ret = ret.dtype.type(ret / rcount)\n",
+      "/Users/audrey_clevy/code/eg1/.venv/lib/python3.12/site-packages/numpy/core/_methods.py:206: RuntimeWarning: Degrees of freedom <= 0 for slice\n",
+      "  ret = _var(a, axis=axis, dtype=dtype, out=out, ddof=ddof,\n",
+      "/Users/audrey_clevy/code/eg1/.venv/lib/python3.12/site-packages/numpy/core/_methods.py:163: RuntimeWarning: invalid value encountered in divide\n",
+      "  arrmean = um.true_divide(arrmean, div, out=arrmean,\n",
+      "/Users/audrey_clevy/code/eg1/.venv/lib/python3.12/site-packages/numpy/core/_methods.py:198: RuntimeWarning: invalid value encountered in scalar divide\n",
+      "  ret = ret.dtype.type(ret / rcount)\n",
+      "/var/folders/4t/djj5rpfd0ml_jf3q6hq94nc00000gn/T/ipykernel_51499/1770081989.py:36: RuntimeWarning: Mean of empty slice.\n",
+      "  row[(metric, 'mean_std')] = f\"{arr.mean():.2f} ± {arr.std():.2f}\"  # Formatting as 'mean±std'\n"
+     ]
+    },
+    {
      "data": {
       "text/html": [
        "<style type=\"text/css\">\n",
-       "#T_9469a_row0_col0, #T_9469a_row0_col3, #T_9469a_row2_col2, #T_9469a_row3_col1, #T_9469a_row3_col4 {\n",
-       "  font-weight: bold;\n",
-       "  color: salmon;\n",
-       "}\n",
-       "#T_9469a_row0_col1, #T_9469a_row0_col2, #T_9469a_row1_col0, #T_9469a_row1_col4, #T_9469a_row2_col3 {\n",
+       "#T_cf494_row1_col0, #T_cf494_row1_col1, #T_cf494_row1_col2, #T_cf494_row1_col4, #T_cf494_row2_col3, #T_cf494_row2_col5 {\n",
        "  font-weight: bold;\n",
        "  color: green;\n",
        "}\n",
+       "#T_cf494_row1_col3, #T_cf494_row1_col5, #T_cf494_row2_col0, #T_cf494_row2_col2, #T_cf494_row3_col1, #T_cf494_row3_col4 {\n",
+       "  font-weight: bold;\n",
+       "  color: salmon;\n",
+       "}\n",
        "</style>\n",
-       "<table id=\"T_9469a\">\n",
+       "<table id=\"T_cf494\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_9469a_level0_col0\" class=\"col_heading level0 col0\" >answer_relevancy</th>\n",
-       "      <th id=\"T_9469a_level0_col1\" class=\"col_heading level0 col1\" >judge_exactness</th>\n",
-       "      <th id=\"T_9469a_level0_col2\" class=\"col_heading level0 col2\" >judge_notator</th>\n",
-       "      <th id=\"T_9469a_level0_col3\" class=\"col_heading level0 col3\" >output_length</th>\n",
-       "      <th id=\"T_9469a_level0_col4\" class=\"col_heading level0 col4\" >generation_time</th>\n",
+       "      <th id=\"T_cf494_level0_col0\" class=\"col_heading level0 col0\" >answer_relevancy</th>\n",
+       "      <th id=\"T_cf494_level0_col1\" class=\"col_heading level0 col1\" >judge_exactness</th>\n",
+       "      <th id=\"T_cf494_level0_col2\" class=\"col_heading level0 col2\" >judge_notator</th>\n",
+       "      <th id=\"T_cf494_level0_col3\" class=\"col_heading level0 col3\" >output_length</th>\n",
+       "      <th id=\"T_cf494_level0_col4\" class=\"col_heading level0 col4\" >generation_time</th>\n",
+       "      <th id=\"T_cf494_level0_col5\" class=\"col_heading level0 col5\" >nb_tokens_completion</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_9469a_level0_row0\" class=\"row_heading level0 row0\" >mfs-baseline-rag</th>\n",
-       "      <td id=\"T_9469a_row0_col0\" class=\"data row0 col0\" >0.90 ± 0.03</td>\n",
-       "      <td id=\"T_9469a_row0_col1\" class=\"data row0 col1\" >0.13 ± 0.03</td>\n",
-       "      <td id=\"T_9469a_row0_col2\" class=\"data row0 col2\" >5.34 ± 0.22</td>\n",
-       "      <td id=\"T_9469a_row0_col3\" class=\"data row0 col3\" >120.97 ± 4.36</td>\n",
-       "      <td id=\"T_9469a_row0_col4\" class=\"data row0 col4\" >4.65 ± 0.18</td>\n",
+       "      <th id=\"T_cf494_level0_row0\" class=\"row_heading level0 row0\" >mfs-baseline-rag</th>\n",
+       "      <td id=\"T_cf494_row0_col0\" class=\"data row0 col0\" >nan ± nan</td>\n",
+       "      <td id=\"T_cf494_row0_col1\" class=\"data row0 col1\" >nan ± nan</td>\n",
+       "      <td id=\"T_cf494_row0_col2\" class=\"data row0 col2\" >nan ± nan</td>\n",
+       "      <td id=\"T_cf494_row0_col3\" class=\"data row0 col3\" >nan ± nan</td>\n",
+       "      <td id=\"T_cf494_row0_col4\" class=\"data row0 col4\" >nan ± nan</td>\n",
+       "      <td id=\"T_cf494_row0_col5\" class=\"data row0 col5\" >nan ± nan</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_9469a_level0_row1\" class=\"row_heading level0 row1\" >meta-llama/Meta-Llama-3.1-70B-Instruct</th>\n",
-       "      <td id=\"T_9469a_row1_col0\" class=\"data row1 col0\" >0.96 ± 0.02</td>\n",
-       "      <td id=\"T_9469a_row1_col1\" class=\"data row1 col1\" >0.08 ± 0.03</td>\n",
-       "      <td id=\"T_9469a_row1_col2\" class=\"data row1 col2\" >4.87 ± 0.22</td>\n",
-       "      <td id=\"T_9469a_row1_col3\" class=\"data row1 col3\" >240.28 ± 13.35</td>\n",
-       "      <td id=\"T_9469a_row1_col4\" class=\"data row1 col4\" >9.10 ± 0.60</td>\n",
+       "      <th id=\"T_cf494_level0_row1\" class=\"row_heading level0 row1\" >meta-llama/Meta-Llama-3.1-70B-Instruct</th>\n",
+       "      <td id=\"T_cf494_row1_col0\" class=\"data row1 col0\" >0.98 ± 0.01</td>\n",
+       "      <td id=\"T_cf494_row1_col1\" class=\"data row1 col1\" >0.05 ± 0.02</td>\n",
+       "      <td id=\"T_cf494_row1_col2\" class=\"data row1 col2\" >4.46 ± 0.11</td>\n",
+       "      <td id=\"T_cf494_row1_col3\" class=\"data row1 col3\" >244.57 ± 8.75</td>\n",
+       "      <td id=\"T_cf494_row1_col4\" class=\"data row1 col4\" >8.66 ± 0.01</td>\n",
+       "      <td id=\"T_cf494_row1_col5\" class=\"data row1 col5\" >395.22 ± 9.39</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_9469a_level0_row2\" class=\"row_heading level0 row2\" >AgentPublic/llama3-instruct-8b</th>\n",
-       "      <td id=\"T_9469a_row2_col0\" class=\"data row2 col0\" >0.92 ± 0.02</td>\n",
-       "      <td id=\"T_9469a_row2_col1\" class=\"data row2 col1\" >0.03 ± 0.02</td>\n",
-       "      <td id=\"T_9469a_row2_col2\" class=\"data row2 col2\" >3.37 ± 0.15</td>\n",
-       "      <td id=\"T_9469a_row2_col3\" class=\"data row2 col3\" >309.97 ± 7.37</td>\n",
-       "      <td id=\"T_9469a_row2_col4\" class=\"data row2 col4\" >6.69 ± 0.13</td>\n",
+       "      <th id=\"T_cf494_level0_row2\" class=\"row_heading level0 row2\" >AgentPublic/llama3-instruct-8b</th>\n",
+       "      <td id=\"T_cf494_row2_col0\" class=\"data row2 col0\" >0.91 ± 0.00</td>\n",
+       "      <td id=\"T_cf494_row2_col1\" class=\"data row2 col1\" >0.02 ± 0.02</td>\n",
+       "      <td id=\"T_cf494_row2_col2\" class=\"data row2 col2\" >3.24 ± 0.01</td>\n",
+       "      <td id=\"T_cf494_row2_col3\" class=\"data row2 col3\" >314.89 ± 3.14</td>\n",
+       "      <td id=\"T_cf494_row2_col4\" class=\"data row2 col4\" >7.22 ± 0.92</td>\n",
+       "      <td id=\"T_cf494_row2_col5\" class=\"data row2 col5\" >489.12 ± 31.28</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_9469a_level0_row3\" class=\"row_heading level0 row3\" >meta-llama/Meta-Llama-3.1-8B-Instruct</th>\n",
-       "      <td id=\"T_9469a_row3_col0\" class=\"data row3 col0\" >0.92 ± 0.03</td>\n",
-       "      <td id=\"T_9469a_row3_col1\" class=\"data row3 col1\" >0.02 ± 0.02</td>\n",
-       "      <td id=\"T_9469a_row3_col2\" class=\"data row3 col2\" >3.60 ± 0.12</td>\n",
-       "      <td id=\"T_9469a_row3_col3\" class=\"data row3 col3\" >296.09 ± 10.61</td>\n",
-       "      <td id=\"T_9469a_row3_col4\" class=\"data row3 col4\" >3.80 ± 0.14</td>\n",
+       "      <th id=\"T_cf494_level0_row3\" class=\"row_heading level0 row3\" >meta-llama/Meta-Llama-3.1-8B-Instruct</th>\n",
+       "      <td id=\"T_cf494_row3_col0\" class=\"data row3 col0\" >0.93 ± 0.03</td>\n",
+       "      <td id=\"T_cf494_row3_col1\" class=\"data row3 col1\" >0.00 ± 0.00</td>\n",
+       "      <td id=\"T_cf494_row3_col2\" class=\"data row3 col2\" >3.37 ± 0.15</td>\n",
+       "      <td id=\"T_cf494_row3_col3\" class=\"data row3 col3\" >300.90 ± 34.62</td>\n",
+       "      <td id=\"T_cf494_row3_col4\" class=\"data row3 col4\" >3.56 ± 0.09</td>\n",
+       "      <td id=\"T_cf494_row3_col5\" class=\"data row3 col5\" >476.03 ± 15.70</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x7f35eb5309b0>"
+       "<pandas.io.formats.style.Styler at 0x12f8252b0>"
       ]
      },
-     "execution_count": 174,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,7 +422,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
