fix API_URL name

--- a/notebooks/run_experiments_demo.ipynb
+++ b/notebooks/run_experiments_demo.ipynb
@@ -211,7 +211,7 @@
    "source": [
     "# Publish a dataset\n",
     "dataset = {\"name\": \"MFS_questions_v01\", \"df\": mfs_dataset.to_json()}\n",
-    "response = requests.post(f'{API_URL}/v1/dataset', json=dataset, headers=headers})\n",
+    "response = requests.post(f'{EG1_API_URL}/v1/dataset', json=dataset, headers=headers})\n",
     "resp = response.json()\n",
     "resp"
    ]
