--- a/notebooks/run_experiments_demo.ipynb
+++ b/notebooks/run_experiments_demo.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 132,
    "id": "fb6038d3-def4-4fc4-8ae2-4327af3e919f",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
     "from api.utils import log_and_raise_for_status\n",
     "\n",
     "API_URL = \"http://localhost:8000\"\n",
-    "ALBERT_API_URL = \"https://albert.api.staging.etalab.gouv.fr/v1\"\n",
+    "ALBERT_API_URL = \"https://albert.api.etalab.gouv.fr/v1\"\n",
     "ALBERT_API_KEY = os.getenv(\"ALBERT_API_KEY\")\n",
     "MFS_API_URL = \"https://franceservices.staging.etalab.gouv.fr/api/v1\"\n",
     "MFS_API_KEY = os.getenv(\"MFS_API_KEY\")"
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 135,
    "id": "7e461411-899a-4cec-a14d-4ad419b30c9d",
    "metadata": {},
    "outputs": [
@@ -239,12 +239,6 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>judge_complexity</td>\n",
-       "      <td>[0-10] score complexity of query, thematic...</td>\n",
-       "      <td>dataset</td>\n",
-       "      <td>[query]</td>\n",
-       "    </tr>\n",
        "    <tr>\n",
        "      <td>answer_relevancy</td>\n",
        "      <td>see https://docs.confident-ai.com/docs/metrics-introduction</td>\n",
@@ -324,7 +318,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,7 +378,7 @@
     "    },    \n",
     "]\n",
     "sampling_params = {\"temperature\": 0.2} # use the same sampling params for all in this evalation\n",
-    "metrics = [\"output_length\", \"judge_notator\", \"nb_tokens_completion\"]\n",
+    "metrics = [\"output_length\", \"judge_exactness\", \"judge_completude\", \"judge_notator\", \"bias\", \"toxicity\", \"answer_relevancy\"]\n",
     "\n",
     "# Lauching the experiments\n",
     "experiment_ids = []\n",
@@ -668,7 +662,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
