fix: rag metrics + more

--- a/notebooks/run_experiments_demo.ipynb
+++ b/notebooks/run_experiments_demo.ipynb
@@ -34,8 +34,8 @@
     "sys.path.append(\"..\")\n",
     "from api.utils import log_and_raise_for_status\n",
     "\n",
-    "#EG1_API_URL = \"http://localhost:8000\"\n",
-    "EG1_API_URL = \"https://eg1.dev.etalab.gouv.fr/api\"\n",
+    "#EG1_API_URL = \"http://localhost:8000/v1\"\n",
+    "EG1_API_URL = \"https://eg1.dev.etalab.gouv.fr/v1\"\n",
     "EG1_API_KEY = os.getenv(\"EG1_API_KEY\") \n",
     "ALBERT_API_URL = \"https://albert.api.etalab.gouv.fr/v1\"\n",
     "ALBERT_API_KEY = os.getenv(\"ALBERT_API_KEY\")\n",
@@ -211,7 +211,7 @@
    "source": [
     "# Publish a dataset\n",
     "dataset = {\"name\": \"MFS_questions_v01\", \"df\": mfs_dataset.to_json()}\n",
-    "response = requests.post(f'{EG1_API_URL}/v1/dataset', json=dataset, headers=headers})\n",
+    "response = requests.post(f'{EG1_API_URL}/dataset', json=dataset, headers=headers)\n",
     "resp = response.json()\n",
     "resp"
    ]
@@ -370,7 +370,7 @@
     "# Show available metrics\n",
     "# - the require fields should be an existing field to the dataset used with the metric.\n",
     "# - output metric can be generated from the query (see below)\n",
-    "response = requests.get(f'{API_URL}/v1/metrics', headers=headers)\n",
+    "response = requests.get(f'{API_URL}/metrics', headers=headers)\n",
     "all_metrics = response.json()\n",
     "df = pd.DataFrame(all_metrics).sort_values(by=[\"type\", \"name\"])\n",
     "HTML(df.to_html(index=False))"
@@ -434,7 +434,7 @@
     "        \"model\": model,\n",
     "        \"metrics\": metrics,\n",
     "    }\n",
-    "    response = requests.post(f'{EG1_API_URL}/v1/experiment', json=experiment, headers=headers)\n",
+    "    response = requests.post(f'{EG1_API_URL}/experiment', json=experiment, headers=headers)\n",
     "    resp = response.json()\n",
     "    if \"id\" in resp:\n",
     "        experiment_ids.append(resp[\"id\"])\n",
@@ -469,7 +469,7 @@
     "        \"metrics\": [\"generation_time\"],\n",
     "        \"rerun_answers\": False,\n",
     "    }\n",
-    "    response = requests.patch(f'{EG1_API_URL}/v1/experiment/{exp_id}', json=experiment, headers=headers)\n",
+    "    response = requests.patch(f'{EG1_API_URL}/experiment/{exp_id}', json=experiment, headers=headers)\n",
     "    resp = response.json()\n",
     "    if \"id\" in resp:\n",
     "        print(f'Updated experiment: {resp[\"name\"]} ({resp[\"id\"]}), status: {resp[\"experiment_status\"]}')\n",
@@ -611,7 +611,7 @@
     "supports = [] # Store the support for debugging: if some answer/observation failed, the support can be less than the dataset size\n",
     "for model, exp_id in zip(models_to_test, experiment_ids):\n",
     "    # Get an experiment result\n",
-    "    response = requests.get(f'{EG1_API_URL}/v1/experiment/{exp_id}?with_results=true', headers=headers)\n",
+    "    response = requests.get(f'{EG1_API_URL}/experiment/{exp_id}?with_results=true', headers=headers)\n",
     "    experiment = response.json()\n",
     "    # experiment[\"name\"] # Name of the experiment\n",
     "    if experiment[\"experiment_status\"] != \"finished\":\n",
