--- a/notebooks/run_grid_raglimit_demo.ipynb
+++ b/notebooks/run_grid_raglimit_demo.ipynb
@@ -45,8 +45,8 @@
     "sys.path.append(\"..\")\n",
     "from api.utils import log_and_raise_for_status\n",
     "\n",
-    "#EG1_API_URL = \"http://localhost:8000\"\n",
-    "EG1_API_URL = \"https://eg1.dev.etalab.gouv.fr/api\"\n",
+    "#EG1_API_URL = \"http://localhost:8000/v1\"\n",
+    "EG1_API_URL = \"https://eg1.dev.etalab.gouv.fr/v1\"\n",
     "EG1_API_KEY = os.getenv(\"EG1_API_KEY\") \n",
     "ALBERT_API_URL = \"https://albert.api.etalab.gouv.fr/v1\"\n",
     "ALBERT_API_KEY = os.getenv(\"ALBERT_API_KEY\")\n",
@@ -132,7 +132,7 @@
     "    \"readme\": expset_readme,\n",
     "    \"cv\": {\"common_params\": common_params, \"grid_params\": grid_params}\n",
     "}\n",
-    "response = requests.post(f'{EG1_API_URL}/v1/experiment_set', json=expset, headers=headers)\n",
+    "response = requests.post(f'{EG1_API_URL}/experiment_set', json=expset, headers=headers)\n",
     "resp = response.json()\n",
     "if \"id\" in resp:\n",
     "    expset_id = resp[\"id\"]\n",
@@ -280,13 +280,13 @@
     "\n",
     "# Fetch results and compute macro metrics (mean, std etc).\n",
     "# --\n",
-    "response = requests.get(f'{EG1_API_URL}/v1/experiment_set/{expset_id}', headers=headers)\n",
+    "response = requests.get(f'{EG1_API_URL}/experiment_set/{expset_id}', headers=headers)\n",
     "expset = response.json()\n",
     "rows = []\n",
     "for i, exp in enumerate(expset[\"experiments\"]):\n",
     "    # Get an experiment result\n",
     "    exp_id = exp[\"id\"]\n",
-    "    response = requests.get(f'{EG1_API_URL}/v1/experiment/{exp_id}?with_results=true', headers=headers)\n",
+    "    response = requests.get(f'{EG1_API_URL}/experiment/{exp_id}?with_results=true', headers=headers)\n",
     "    experiment = response.json()\n",
     "    # experiment[\"name\"] # Name of the experiment\n",
     "    if experiment[\"experiment_status\"] != \"finished\":\n",
