fix(schema): np.nan serialization

--- a/notebooks/run_grid_raglimit_demo.ipynb
+++ b/notebooks/run_grid_raglimit_demo.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "id": "fb6038d3-def4-4fc4-8ae2-4327af3e919f",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "0d1e7ad4-defb-4399-b70b-b63331672438",
    "metadata": {},
    "outputs": [],
@@ -312,8 +312,7 @@
     "df_all = pd.DataFrame(rows)\n",
     "df_all.set_index('model', inplace=True)\n",
     "df_all.columns = pd.MultiIndex.from_tuples(df_all.columns)\n",
-    "final_df = df_all.xs('mean', axis=1, level=1)\n",
-    "#final_df[\"support\"] = supports # for debugging\n",
+    "final_df = df_all.xs('mean', axis=1, level=1) # pick the \"macro\" metric to show (mean, std, support etc)\n",
     "\n",
     "final_df = final_df.sort_values(by='judge_exactness', ascending=False)\n",
     "final_df = final_df[metrics] # reorder columns\n",
