--- a/notebooks/run_grid_repeat_demo.ipynb
+++ b/notebooks/run_grid_repeat_demo.ipynb
@@ -276,8 +276,7 @@
     "df_all = pd.DataFrame(rows)\n",
     "df_all.set_index('model', inplace=True)\n",
     "df_all.columns = pd.MultiIndex.from_tuples(df_all.columns)\n",
-    "final_df = df_all.xs('mean', axis=1, level=1)\n",
-    "#final_df[\"support\"] = supports # for debugging\n",
+    "final_df = df_all.xs('mean', axis=1, level=1) # pick the \"macro\" metric to show (mean, std, support etc)\n",
     "\n",
     "# Group and average the result of the experiments by models\n",
     "# --\n",
