--- a/notebooks/run_set_raglimit_demo.ipynb
+++ b/notebooks/run_set_raglimit_demo.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "fb6038d3-def4-4fc4-8ae2-4327af3e919f",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "0d1e7ad4-defb-4399-b70b-b63331672438",
    "metadata": {},
    "outputs": [],
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "id": "1b60dd8b-e7b5-4a08-86c7-1025c5b80f18",
    "metadata": {},
    "outputs": [
@@ -106,21 +106,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Created expset: fs_rag_limit_v2 (12)\n"
+      "Created expset: mfs_rag_limit_v1 (7)\n"
      ]
     }
    ],
    "source": [
     "# Designing my experiments\n",
     "# --\n",
-    "expset_name = \"fs_rag_limit_v2\"\n",
+    "expset_name = \"mfs_rag_limit_v1\"\n",
     "expset_readme = \"Comparing the impact of the `limit` parameters on a RAG model.\"\n",
     "metrics = [\"answer_relevancy\", \"judge_exactness\", \"judge_notator\", \"output_length\", \"generation_time\"]\n",
     "common_params = {\n",
     "    \"dataset\" : \"MFS_questions_v01\",\n",
-    "    \"model\" : {\"name\": \"AgentPublic/llama3-instruct-8b\", \"base_url\": MFS_API_URL, \"api_key\": MFS_API_KEY},\n",
-    "    \"sampling_params\" : {\"temperature\": 0.2},\n",
-    "    \"metrics\" : metrics\n",
+    "    \"model\" : {\"name\": \"AgentPublic/llama3-instruct-8b\", \"sampling_params\": {\"temperature\": 0.2}, \"base_url\": MFS_API_URL, \"api_key\": MFS_API_KEY},\n",
+    "    \"metrics\" : metrics,\n",
+    "    \"judge_model\": \"gpt-4o-mini\", # the default is not given\n",
     "}\n",
     "grid_params = {\n",
     "    \"model\": [{\"extra_params\": {\"rag\": {\"mode\":\"rag\", \"limit\":i}}} for i in [1, 2, 3, 4, 5, 7, 10, 15, 20]],\n",
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "177816f4-1105-497d-a14b-7178850d36f4",
    "metadata": {},
    "outputs": [
@@ -159,24 +159,24 @@
      "data": {
       "text/html": [
        "<style type=\"text/css\">\n",
-       "#T_d3929_row0_col0, #T_d3929_row0_col1, #T_d3929_row2_col2, #T_d3929_row3_col3, #T_d3929_row3_col4 {\n",
+       "#T_b1eb3_row0_col1, #T_b1eb3_row0_col3, #T_b1eb3_row0_col4, #T_b1eb3_row1_col0, #T_b1eb3_row3_col2 {\n",
        "  font-weight: bold;\n",
        "  color: green;\n",
        "}\n",
-       "#T_d3929_row6_col1, #T_d3929_row7_col0, #T_d3929_row7_col2, #T_d3929_row7_col3, #T_d3929_row7_col4 {\n",
+       "#T_b1eb3_row8_col0, #T_b1eb3_row8_col1, #T_b1eb3_row8_col2, #T_b1eb3_row8_col3, #T_b1eb3_row8_col4 {\n",
        "  font-weight: bold;\n",
        "  color: salmon;\n",
        "}\n",
        "</style>\n",
-       "<table id=\"T_d3929\">\n",
+       "<table id=\"T_b1eb3\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_d3929_level0_col0\" class=\"col_heading level0 col0\" >answer_relevancy</th>\n",
-       "      <th id=\"T_d3929_level0_col1\" class=\"col_heading level0 col1\" >judge_exactness</th>\n",
-       "      <th id=\"T_d3929_level0_col2\" class=\"col_heading level0 col2\" >judge_notator</th>\n",
-       "      <th id=\"T_d3929_level0_col3\" class=\"col_heading level0 col3\" >output_length</th>\n",
-       "      <th id=\"T_d3929_level0_col4\" class=\"col_heading level0 col4\" >generation_time</th>\n",
+       "      <th id=\"T_b1eb3_level0_col0\" class=\"col_heading level0 col0\" >answer_relevancy</th>\n",
+       "      <th id=\"T_b1eb3_level0_col1\" class=\"col_heading level0 col1\" >judge_exactness</th>\n",
+       "      <th id=\"T_b1eb3_level0_col2\" class=\"col_heading level0 col2\" >judge_notator</th>\n",
+       "      <th id=\"T_b1eb3_level0_col3\" class=\"col_heading level0 col3\" >output_length</th>\n",
+       "      <th id=\"T_b1eb3_level0_col4\" class=\"col_heading level0 col4\" >generation_time</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th class=\"index_name level0\" >model</th>\n",
@@ -189,85 +189,85 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_d3929_level0_row0\" class=\"row_heading level0 row0\" >AgentPublic/llama3-instruct-8b_limit5</th>\n",
-       "      <td id=\"T_d3929_row0_col0\" class=\"data row0 col0\" >0.928468</td>\n",
-       "      <td id=\"T_d3929_row0_col1\" class=\"data row0 col1\" >0.153846</td>\n",
-       "      <td id=\"T_d3929_row0_col2\" class=\"data row0 col2\" >4.846154</td>\n",
-       "      <td id=\"T_d3929_row0_col3\" class=\"data row0 col3\" >120.615385</td>\n",
-       "      <td id=\"T_d3929_row0_col4\" class=\"data row0 col4\" >4.538462</td>\n",
+       "      <th id=\"T_b1eb3_level0_row0\" class=\"row_heading level0 row0\" >AgentPublic/llama3-instruct-8b_limit20</th>\n",
+       "      <td id=\"T_b1eb3_row0_col0\" class=\"data row0 col0\" >0.877041</td>\n",
+       "      <td id=\"T_b1eb3_row0_col1\" class=\"data row0 col1\" >0.589744</td>\n",
+       "      <td id=\"T_b1eb3_row0_col2\" class=\"data row0 col2\" >6.307692</td>\n",
+       "      <td id=\"T_b1eb3_row0_col3\" class=\"data row0 col3\" >138.230769</td>\n",
+       "      <td id=\"T_b1eb3_row0_col4\" class=\"data row0 col4\" >5.769231</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_d3929_level0_row1\" class=\"row_heading level0 row1\" >AgentPublic/llama3-instruct-8b_limit4</th>\n",
-       "      <td id=\"T_d3929_row1_col0\" class=\"data row1 col0\" >0.884116</td>\n",
-       "      <td id=\"T_d3929_row1_col1\" class=\"data row1 col1\" >0.128205</td>\n",
-       "      <td id=\"T_d3929_row1_col2\" class=\"data row1 col2\" >5.256410</td>\n",
-       "      <td id=\"T_d3929_row1_col3\" class=\"data row1 col3\" >117.487179</td>\n",
-       "      <td id=\"T_d3929_row1_col4\" class=\"data row1 col4\" >4.333333</td>\n",
+       "      <th id=\"T_b1eb3_level0_row1\" class=\"row_heading level0 row1\" >AgentPublic/llama3-instruct-8b_limit7</th>\n",
+       "      <td id=\"T_b1eb3_row1_col0\" class=\"data row1 col0\" >0.880916</td>\n",
+       "      <td id=\"T_b1eb3_row1_col1\" class=\"data row1 col1\" >0.564103</td>\n",
+       "      <td id=\"T_b1eb3_row1_col2\" class=\"data row1 col2\" >6.487179</td>\n",
+       "      <td id=\"T_b1eb3_row1_col3\" class=\"data row1 col3\" >121.538462</td>\n",
+       "      <td id=\"T_b1eb3_row1_col4\" class=\"data row1 col4\" >4.743590</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_d3929_level0_row2\" class=\"row_heading level0 row2\" >AgentPublic/llama3-instruct-8b_limit10</th>\n",
-       "      <td id=\"T_d3929_row2_col0\" class=\"data row2 col0\" >0.916034</td>\n",
-       "      <td id=\"T_d3929_row2_col1\" class=\"data row2 col1\" >0.128205</td>\n",
-       "      <td id=\"T_d3929_row2_col2\" class=\"data row2 col2\" >5.589744</td>\n",
-       "      <td id=\"T_d3929_row2_col3\" class=\"data row2 col3\" >125.000000</td>\n",
-       "      <td id=\"T_d3929_row2_col4\" class=\"data row2 col4\" >5.000000</td>\n",
+       "      <th id=\"T_b1eb3_level0_row2\" class=\"row_heading level0 row2\" >AgentPublic/llama3-instruct-8b_limit10</th>\n",
+       "      <td id=\"T_b1eb3_row2_col0\" class=\"data row2 col0\" >0.848411</td>\n",
+       "      <td id=\"T_b1eb3_row2_col1\" class=\"data row2 col1\" >0.564103</td>\n",
+       "      <td id=\"T_b1eb3_row2_col2\" class=\"data row2 col2\" >6.487179</td>\n",
+       "      <td id=\"T_b1eb3_row2_col3\" class=\"data row2 col3\" >131.692308</td>\n",
+       "      <td id=\"T_b1eb3_row2_col4\" class=\"data row2 col4\" >4.641026</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_d3929_level0_row3\" class=\"row_heading level0 row3\" >AgentPublic/llama3-instruct-8b_limit20</th>\n",
-       "      <td id=\"T_d3929_row3_col0\" class=\"data row3 col0\" >0.915436</td>\n",
-       "      <td id=\"T_d3929_row3_col1\" class=\"data row3 col1\" >0.128205</td>\n",
-       "      <td id=\"T_d3929_row3_col2\" class=\"data row3 col2\" >5.487179</td>\n",
-       "      <td id=\"T_d3929_row3_col3\" class=\"data row3 col3\" >135.589744</td>\n",
-       "      <td id=\"T_d3929_row3_col4\" class=\"data row3 col4\" >5.512821</td>\n",
+       "      <th id=\"T_b1eb3_level0_row3\" class=\"row_heading level0 row3\" >AgentPublic/llama3-instruct-8b_limit15</th>\n",
+       "      <td id=\"T_b1eb3_row3_col0\" class=\"data row3 col0\" >0.853233</td>\n",
+       "      <td id=\"T_b1eb3_row3_col1\" class=\"data row3 col1\" >0.564103</td>\n",
+       "      <td id=\"T_b1eb3_row3_col2\" class=\"data row3 col2\" >6.641026</td>\n",
+       "      <td id=\"T_b1eb3_row3_col3\" class=\"data row3 col3\" >127.871795</td>\n",
+       "      <td id=\"T_b1eb3_row3_col4\" class=\"data row3 col4\" >4.897436</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_d3929_level0_row4\" class=\"row_heading level0 row4\" >AgentPublic/llama3-instruct-8b_limit7</th>\n",
-       "      <td id=\"T_d3929_row4_col0\" class=\"data row4 col0\" >0.802585</td>\n",
-       "      <td id=\"T_d3929_row4_col1\" class=\"data row4 col1\" >0.102564</td>\n",
-       "      <td id=\"T_d3929_row4_col2\" class=\"data row4 col2\" >5.205128</td>\n",
-       "      <td id=\"T_d3929_row4_col3\" class=\"data row4 col3\" >122.974359</td>\n",
-       "      <td id=\"T_d3929_row4_col4\" class=\"data row4 col4\" >4.641026</td>\n",
+       "      <th id=\"T_b1eb3_level0_row4\" class=\"row_heading level0 row4\" >AgentPublic/llama3-instruct-8b_limit5</th>\n",
+       "      <td id=\"T_b1eb3_row4_col0\" class=\"data row4 col0\" >0.786707</td>\n",
+       "      <td id=\"T_b1eb3_row4_col1\" class=\"data row4 col1\" >0.487179</td>\n",
+       "      <td id=\"T_b1eb3_row4_col2\" class=\"data row4 col2\" >6.230769</td>\n",
+       "      <td id=\"T_b1eb3_row4_col3\" class=\"data row4 col3\" >112.948718</td>\n",
+       "      <td id=\"T_b1eb3_row4_col4\" class=\"data row4 col4\" >4.230769</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_d3929_level0_row5\" class=\"row_heading level0 row5\" >AgentPublic/llama3-instruct-8b_limit15</th>\n",
-       "      <td id=\"T_d3929_row5_col0\" class=\"data row5 col0\" >0.876101</td>\n",
-       "      <td id=\"T_d3929_row5_col1\" class=\"data row5 col1\" >0.102564</td>\n",
-       "      <td id=\"T_d3929_row5_col2\" class=\"data row5 col2\" >5.153846</td>\n",
-       "      <td id=\"T_d3929_row5_col3\" class=\"data row5 col3\" >121.487179</td>\n",
-       "      <td id=\"T_d3929_row5_col4\" class=\"data row5 col4\" >5.230769</td>\n",
+       "      <th id=\"T_b1eb3_level0_row5\" class=\"row_heading level0 row5\" >AgentPublic/llama3-instruct-8b_limit4</th>\n",
+       "      <td id=\"T_b1eb3_row5_col0\" class=\"data row5 col0\" >0.842524</td>\n",
+       "      <td id=\"T_b1eb3_row5_col1\" class=\"data row5 col1\" >0.435897</td>\n",
+       "      <td id=\"T_b1eb3_row5_col2\" class=\"data row5 col2\" >5.923077</td>\n",
+       "      <td id=\"T_b1eb3_row5_col3\" class=\"data row5 col3\" >111.666667</td>\n",
+       "      <td id=\"T_b1eb3_row5_col4\" class=\"data row5 col4\" >4.102564</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_d3929_level0_row6\" class=\"row_heading level0 row6\" >AgentPublic/llama3-instruct-8b_limit2</th>\n",
-       "      <td id=\"T_d3929_row6_col0\" class=\"data row6 col0\" >0.871865</td>\n",
-       "      <td id=\"T_d3929_row6_col1\" class=\"data row6 col1\" >0.076923</td>\n",
-       "      <td id=\"T_d3929_row6_col2\" class=\"data row6 col2\" >4.846154</td>\n",
-       "      <td id=\"T_d3929_row6_col3\" class=\"data row6 col3\" >97.717949</td>\n",
-       "      <td id=\"T_d3929_row6_col4\" class=\"data row6 col4\" >3.538462</td>\n",
+       "      <th id=\"T_b1eb3_level0_row6\" class=\"row_heading level0 row6\" >AgentPublic/llama3-instruct-8b_limit2</th>\n",
+       "      <td id=\"T_b1eb3_row6_col0\" class=\"data row6 col0\" >0.785439</td>\n",
+       "      <td id=\"T_b1eb3_row6_col1\" class=\"data row6 col1\" >0.410256</td>\n",
+       "      <td id=\"T_b1eb3_row6_col2\" class=\"data row6 col2\" >5.717949</td>\n",
+       "      <td id=\"T_b1eb3_row6_col3\" class=\"data row6 col3\" >102.076923</td>\n",
+       "      <td id=\"T_b1eb3_row6_col4\" class=\"data row6 col4\" >3.846154</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_d3929_level0_row7\" class=\"row_heading level0 row7\" >AgentPublic/llama3-instruct-8b_limit1</th>\n",
-       "      <td id=\"T_d3929_row7_col0\" class=\"data row7 col0\" >0.781959</td>\n",
-       "      <td id=\"T_d3929_row7_col1\" class=\"data row7 col1\" >0.076923</td>\n",
-       "      <td id=\"T_d3929_row7_col2\" class=\"data row7 col2\" >3.410256</td>\n",
-       "      <td id=\"T_d3929_row7_col3\" class=\"data row7 col3\" >86.384615</td>\n",
-       "      <td id=\"T_d3929_row7_col4\" class=\"data row7 col4\" >3.128205</td>\n",
+       "      <th id=\"T_b1eb3_level0_row7\" class=\"row_heading level0 row7\" >AgentPublic/llama3-instruct-8b_limit3</th>\n",
+       "      <td id=\"T_b1eb3_row7_col0\" class=\"data row7 col0\" >0.855200</td>\n",
+       "      <td id=\"T_b1eb3_row7_col1\" class=\"data row7 col1\" >0.358974</td>\n",
+       "      <td id=\"T_b1eb3_row7_col2\" class=\"data row7 col2\" >5.717949</td>\n",
+       "      <td id=\"T_b1eb3_row7_col3\" class=\"data row7 col3\" >107.307692</td>\n",
+       "      <td id=\"T_b1eb3_row7_col4\" class=\"data row7 col4\" >4.205128</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_d3929_level0_row8\" class=\"row_heading level0 row8\" >AgentPublic/llama3-instruct-8b_limit3</th>\n",
-       "      <td id=\"T_d3929_row8_col0\" class=\"data row8 col0\" >0.860713</td>\n",
-       "      <td id=\"T_d3929_row8_col1\" class=\"data row8 col1\" >0.076923</td>\n",
-       "      <td id=\"T_d3929_row8_col2\" class=\"data row8 col2\" >4.717949</td>\n",
-       "      <td id=\"T_d3929_row8_col3\" class=\"data row8 col3\" >107.410256</td>\n",
-       "      <td id=\"T_d3929_row8_col4\" class=\"data row8 col4\" >3.948718</td>\n",
+       "      <th id=\"T_b1eb3_level0_row8\" class=\"row_heading level0 row8\" >AgentPublic/llama3-instruct-8b_limit1</th>\n",
+       "      <td id=\"T_b1eb3_row8_col0\" class=\"data row8 col0\" >0.775834</td>\n",
+       "      <td id=\"T_b1eb3_row8_col1\" class=\"data row8 col1\" >0.205128</td>\n",
+       "      <td id=\"T_b1eb3_row8_col2\" class=\"data row8 col2\" >4.256410</td>\n",
+       "      <td id=\"T_b1eb3_row8_col3\" class=\"data row8 col3\" >82.692308</td>\n",
+       "      <td id=\"T_b1eb3_row8_col4\" class=\"data row8 col4\" >3.333333</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x7f35fddfe870>"
+       "<pandas.io.formats.style.Styler at 0x7fe924c290d0>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
