--- a/notebooks/run_experiments_demo.ipynb
+++ b/notebooks/run_experiments_demo.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "fb6038d3-def4-4fc4-8ae2-4327af3e919f",
    "metadata": {},
    "outputs": [],
@@ -45,14 +45,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "95d9cbd3-cab7-48ae-bca3-cefcf9505040",
+   "cell_type": "markdown",
+   "id": "ccf3c78f-2b5f-4b9c-bb02-101460395bbf",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "\n",
-    "\n",
     "## Load a dataset on which your evaluation is grounded\n",
     "\n",
     "EG1 can used only 3 fields (more soon): \n",
@@ -229,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "id": "7e461411-899a-4cec-a14d-4ad419b30c9d",
    "metadata": {},
    "outputs": [
@@ -361,7 +357,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,7 +366,7 @@
     "# Show available metrics\n",
     "# - the require fields should be an existing field to the dataset used with the metric.\n",
     "# - output metric can be generated from the query (see below)\n",
-    "response = requests.get(f'{API_URL}/metrics', headers=headers)\n",
+    "response = requests.get(f'{EG1_API_URL}/metrics', headers=headers)\n",
     "all_metrics = response.json()\n",
     "df = pd.DataFrame(all_metrics).sort_values(by=[\"type\", \"name\"])\n",
     "HTML(df.to_html(index=False))"
