--- a/notebooks/run_experiments_demo.ipynb
+++ b/notebooks/run_experiments_demo.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "fb6038d3-def4-4fc4-8ae2-4327af3e919f",
    "metadata": {},
    "outputs": [],
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "id": "f466a3ee-9b1a-4115-8d71-94297d3ced2e",
    "metadata": {},
    "outputs": [
@@ -161,7 +161,7 @@
        "4  CNI/passeport  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "450399aa-f836-47b7-b6f6-2541da8a9f27",
    "metadata": {},
    "outputs": [
@@ -192,21 +192,23 @@
      "data": {
       "text/plain": [
        "{'name': 'MFS_questions_v01',\n",
-       " 'id': 1,\n",
+       " 'readme': 'MFS dataset with ground truth',\n",
+       " 'id': 6,\n",
+       " 'created_at': '2025-01-09T22:02:21.398692',\n",
        " 'has_query': True,\n",
        " 'has_output': False,\n",
-       " 'has_output_true': True,\n",
-       " 'size': 39}"
+       " 'size': 39,\n",
+       " 'columns': ['query', 'output_true', 'top_valid', 'operateur', 'thematique']}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Publish a dataset\n",
-    "dataset = {\"name\": \"MFS_questions_v01\", \"df\": mfs_dataset.to_json()}\n",
+    "dataset = {\"name\": \"MFS_questions_v01\", \"readme\": \"MFS dataset with ground truth\", \"df\": mfs_dataset.to_json()}\n",
     "response = requests.post(f'{EG1_API_URL}/dataset', json=dataset, headers=headers)\n",
     "resp = response.json()\n",
     "resp"
@@ -225,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "id": "7e461411-899a-4cec-a14d-4ad419b30c9d",
    "metadata": {},
    "outputs": [
@@ -357,7 +359,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "id": "1b60dd8b-e7b5-4a08-86c7-1025c5b80f18",
    "metadata": {},
    "outputs": [
@@ -392,10 +394,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Created experiment: MFS_questions>AgentPublic/llama3-instruct-8b_0_v0 (44), status: running_answers\n",
-      "Created experiment: MFS_questions>meta-llama/Meta-Llama-3.1-8B-Instruct_1_v0 (45), status: running_answers\n",
-      "Created experiment: MFS_questions>meta-llama/Meta-Llama-3.1-70B-Instruct_2_v0 (46), status: running_answers\n",
-      "Created experiment: MFS_questions>mfs-rag-baseline_3_v0 (47), status: running_answers\n"
+      "Created experiment: MFS_questions>AgentPublic/llama3-instruct-8b_0_v0 (25), status: running_answers\n",
+      "Created experiment: MFS_questions>mfs-rag-baseline_1_v0 (26), status: running_answers\n"
      ]
     }
    ],
@@ -417,13 +417,15 @@
     "    },    \n",
     "]\n",
     "sampling_params = {\"temperature\": 0.2} # use the same sampling params for all in this evalation\n",
-    "metrics = [\"output_length\", \"judge_exactness\", \"judge_completude\", \"judge_notator\", \"bias\", \"toxicity\", \"answer_relevancy\"]\n",
+    "metrics = [\"output_length\", \"answer_relevancy\"]\n",
     "\n",
     "# Lauching the experiments\n",
     "experiment_ids = []\n",
     "for i, model in enumerate(models_to_test):\n",
     "    name = model[\"_name\"] if model.get(\"_name\") else model[\"name\"]\n",
     "    model[\"sampling_params\"] = sampling_params\n",
+    "    model = model.copy()\n",
+    "    model.pop(\"_name\") if \"_name\" in model else None\n",
     "    experiment = {\n",
     "        \"name\" : f\"MFS_questions>{name}_{i}_v0\", \n",
     "        \"dataset\": dataset,\n",
