--- a/notebooks/run_experiments_demo.ipynb
+++ b/notebooks/run_experiments_demo.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "fb6038d3-def4-4fc4-8ae2-4327af3e919f",
    "metadata": {},
    "outputs": [],
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "f466a3ee-9b1a-4115-8d71-94297d3ced2e",
    "metadata": {},
    "outputs": [
@@ -161,7 +161,7 @@
        "4  CNI/passeport  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "450399aa-f836-47b7-b6f6-2541da8a9f27",
    "metadata": {},
    "outputs": [
@@ -193,22 +193,25 @@
       "text/plain": [
        "{'name': 'MFS_questions_v01',\n",
        " 'readme': 'MFS dataset with ground truth',\n",
-       " 'id': 6,\n",
-       " 'created_at': '2025-01-09T22:02:21.398692',\n",
+       " 'default_metric': 'judge_notator',\n",
+       " 'id': 4,\n",
+       " 'created_at': '2025-01-31T10:49:31.559503',\n",
        " 'has_query': True,\n",
        " 'has_output': False,\n",
        " 'size': 39,\n",
        " 'columns': ['query', 'output_true', 'top_valid', 'operateur', 'thematique']}"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Publish a dataset\n",
-    "dataset = {\"name\": \"MFS_questions_v01\", \"readme\": \"MFS dataset with ground truth\", \"df\": mfs_dataset.to_json()}\n",
+    "dataset = {\"name\": \"MFS_questions_v01\", \"readme\": \"MFS dataset with ground truth\"\n",
+    "           , \"default_metric\" : \"judge_notator\"\n",
+    "           , \"df\": mfs_dataset.to_json()}\n",
     "response = requests.post(f'{EG1_API_URL}/dataset', json=dataset, headers=headers)\n",
     "resp = response.json()\n",
     "resp"
@@ -703,7 +706,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
