--- a/notebooks/run_experiments_demo.ipynb
+++ b/notebooks/run_experiments_demo.ipynb
@@ -410,7 +410,7 @@
     "# Designing my experiments\n",
     "dataset = \"MFS_questions_v01\"\n",
     "models_to_test = [\n",
-    "    {\"name\": \"AgentPublic/llama3-instruct-8b\",         \"base_url\": ALBERT_API_URL, \"api_key\": ALBERT_API_KEY},\n",
+    "    {\"name\": \"meta-llama/Llama-3.1-8B-Instruct\",         \"base_url\": ALBERT_API_URL, \"api_key\": ALBERT_API_KEY},\n",
     "    {\"name\": \"meta-llama/Meta-Llama-3.1-8B-Instruct\",  \"base_url\": ALBERT_API_URL, \"api_key\": ALBERT_API_KEY},\n",
     "    {\"name\": \"meta-llama/Meta-Llama-3.1-70B-Instruct\", \"base_url\": ALBERT_API_URL, \"api_key\": ALBERT_API_KEY},\n",
     "    {\n",
@@ -706,7 +706,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
