--- a/notebooks/run_set_raglimit_demo.ipynb
+++ b/notebooks/run_set_raglimit_demo.ipynb
@@ -118,7 +118,7 @@
     "metrics = [\"answer_relevancy\", \"judge_exactness\", \"judge_notator\", \"output_length\", \"generation_time\"]\n",
     "common_params = {\n",
     "    \"dataset\" : \"MFS_questions_v01\",\n",
-    "    \"model\" : {\"name\": \"AgentPublic/llama3-instruct-8b\", \"sampling_params\": {\"temperature\": 0.2}, \"base_url\": MFS_API_URL, \"api_key\": MFS_API_KEY},\n",
+    "    \"model\" : {\"name\": \"meta-llama/Llama-3.1-8B-Instruct\", \"sampling_params\": {\"temperature\": 0.2}, \"base_url\": MFS_API_URL, \"api_key\": MFS_API_KEY},\n",
     "    \"metrics\" : metrics,\n",
     "    \"judge_model\": \"gpt-4o-mini\", # the default is not given\n",
     "}\n",
