--- a/notebooks/run_set_repeat_demo.ipynb
+++ b/notebooks/run_set_repeat_demo.ipynb
@@ -124,7 +124,7 @@
     "}\n",
     "grid_params = {\n",
     "    \"model\": [\n",
-    "        {\"name\": \"AgentPublic/llama3-instruct-8b\",         \"base_url\": ALBERT_API_URL, \"api_key\": ALBERT_API_KEY},\n",
+    "        {\"name\": \"meta-llama/Llama-3.1-8B-Instruct\",         \"base_url\": ALBERT_API_URL, \"api_key\": ALBERT_API_KEY},\n",
     "        {\"name\": \"meta-llama/Meta-Llama-3.1-8B-Instruct\",  \"base_url\": ALBERT_API_URL, \"api_key\": ALBERT_API_KEY},\n",
     "        {\"name\": \"meta-llama/Meta-Llama-3.1-70B-Instruct\", \"base_url\": ALBERT_API_URL, \"api_key\": ALBERT_API_KEY},\n",
     "        {\n",
