--- a/notebooks/run_set_ragmetrics_demo.ipynb
+++ b/notebooks/run_set_ragmetrics_demo.ipynb
@@ -111,7 +111,7 @@
     "grid_params = {\n",
     "    \"model\": [\n",
     "        {\n",
-    "          \"name\": \"AgentPublic/llama3-instruct-8b\", \"extra_params\": {\"rag\": {\"mode\":\"rag\", \"limit\":7}}, \n",
+    "          \"name\": \"meta-llama/Llama-3.1-8B-Instruct\", \"extra_params\": {\"rag\": {\"mode\":\"rag\", \"limit\":7}}, \n",
     "          \"base_url\": MFS_API_URL, \"api_key\": MFS_API_KEY, \n",
     "        }\n",
     "    ],\n",
