fix: schema table init + update expset repeat v2 notebook

--- a/notebooks/run_set_repeat_demo.ipynb
+++ b/notebooks/run_set_repeat_demo.ipynb
@@ -48,7 +48,7 @@
     "#EG1_API_URL = \"http://localhost:8000/v1\"\n",
     "EG1_API_URL = \"https://eg1.dev.etalab.gouv.fr/v1\"\n",
     "EG1_API_KEY = os.getenv(\"EG1_API_KEY\") \n",
-    "ALBERT_API_URL = \"https://albert.api.etalab.gouv.fr/v1\"\n",
+    "ALBERT_API_URL = \"https://albert.api.staging.etalab.gouv.fr/v1\"\n",
     "ALBERT_API_KEY = os.getenv(\"ALBERT_API_KEY\")\n",
     "MFS_API_URL = \"https://franceservices.etalab.gouv.fr/api/v1\"\n",
     "MFS_API_KEY = os.getenv(\"MFS_API_KEY\")\n",
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "9fbaf493-b597-4ae2-a9eb-66b43b3afe9f",
    "metadata": {},
    "outputs": [],
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "id": "1b60dd8b-e7b5-4a08-86c7-1025c5b80f18",
    "metadata": {},
    "outputs": [
@@ -106,14 +106,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Created expset: mfs_variability_v1 (6)\n"
+      "Created expset: mfs_variability_v2 (10)\n"
      ]
     }
    ],
    "source": [
     "# Designing my experiments\n",
     "# --\n",
-    "expset_name = \"mfs_variability_v1\"\n",
+    "expset_name = \"mfs_variability_v2\"\n",
     "expset_readme = \"Comparing some models variability.\"\n",
     "metrics = [\"answer_relevancy\", \"judge_exactness\", \"judge_notator\", \"output_length\", \"generation_time\"]\n",
     "common_params = {\n",
@@ -124,11 +124,17 @@
     "}\n",
     "grid_params = {\n",
     "    \"model\": [\n",
-    "        {\"name\": \"meta-llama/Llama-3.1-8B-Instruct\",         \"base_url\": ALBERT_API_URL, \"api_key\": ALBERT_API_KEY},\n",
-    "        {\"name\": \"meta-llama/Meta-Llama-3.1-8B-Instruct\",  \"base_url\": ALBERT_API_URL, \"api_key\": ALBERT_API_KEY},\n",
-    "        {\"name\": \"meta-llama/Meta-Llama-3.1-70B-Instruct\", \"base_url\": ALBERT_API_URL, \"api_key\": ALBERT_API_KEY},\n",
+    "        {\"name\": \"google/gemma-2-9b-it\",                   \"base_url\": ALBERT_API_URL, \"api_key\": ALBERT_API_KEY},\n",
+    "        {\"name\": \"meta-llama/Llama-3.1-8B-Instruct\",       \"base_url\": ALBERT_API_URL, \"api_key\": ALBERT_API_KEY},\n",
+    "        {\"name\": \"meta-llama/Llama-3.2-3B-Instruct\",  \"base_url\": ALBERT_API_URL, \"api_key\": ALBERT_API_KEY},\n",
+    "        {\"name\": \"neuralmagic/Meta-Llama-3.1-70B-Instruct-FP8\",  \"base_url\": ALBERT_API_URL, \"api_key\": ALBERT_API_KEY},\n",
+    "        {\"name\": \"meta-llama/Llama-3.3-70B-Instruct\", \"base_url\": ALBERT_API_URL, \"api_key\": ALBERT_API_KEY},\n",
     "        {\n",
-    "          \"name\": \"AgentPublic/llama3-instruct-8b\", \"extra_params\": {\"rag\": {\"mode\":\"rag\", \"limit\":7}}, \n",
+    "          \"name\": \"meta-llama/Llama-3.1-8B-Instruct\", \"extra_params\": {\"rag\": {\"mode\":\"rag\", \"limit\":7}}, \n",
+    "          \"base_url\": MFS_API_URL, \"api_key\": MFS_API_KEY, \n",
+    "        },\n",
+    "        {\n",
+    "          \"name\": \"AgentPublic/llama3-instruct-guillaumetell\", \"extra_params\": {\"rag\": {\"mode\":\"rag\", \"limit\":7}}, \n",
     "          \"base_url\": MFS_API_URL, \"api_key\": MFS_API_KEY, \n",
     "        }\n",
     "    ],\n",
